--- a/force-app/main/default/classes/AssinaturaDAO.cls
+++ b/force-app/main/default/classes/AssinaturaDAO.cls
@@ -24,9 +24,12 @@ public with sharing class AssinaturaDAO {
 
         return [
             SELECT 
-                id, // Buscar relacionamentos
-                Leitor__c,
+                id,
                 Periodico__c,
+                Leitor__c,
+                Periodico__r.Nome__c,
+                Leitor__r.Nome__c,
+                Leitor__r.Sobrenome__c,
                 DataAssinatura__c,
                 TipoAssinatura__c
             FROM
@@ -35,16 +38,16 @@ public with sharing class AssinaturaDAO {
         ];
     }
 
-    public List<Assinatura__c> buscaAssinaturasPorKeyword(String keyword, String status) 
+    public List<Assinatura__c> buscaAssinaturasPorKeyword(String keyword, String tipoAssinatura) 
     {
 
         // Concateno meu keyword com '%', ficando '%keyword%'
         keyword = '%'+keyword+'%';
 
-        // Valido qual o valor que está vindo em status
-        if (status == '*') 
+        // Valido qual o valor que está vindo em tipoAssinatura
+        if (tipoAssinatura == '*') 
         {
-            status = '%%';
+            tipoAssinatura = '%%';
         }
 
         return [
@@ -60,35 +63,55 @@ public with sharing class AssinaturaDAO {
             FROM 
                 Assinatura__c
             WHERE 
-                Periodico__r.Nome__c LIKE :keyword
+                (
+                    Periodico__r.Nome__c LIKE :keyword OR 
+                    Leitor__r.Nome__c LIKE :keyword OR 
+                    Leitor__r.Sobrenome__c LIKE :keyword
+                )
+                AND
+                (
+                    TipoAssinatura__c LIKE :tipoAssinatura 
+                )
             ORDER BY Name DESC
         ];
     }
 
-    public Assinatura__c atualizaInsereAssinatura(Id assinaturaId, Id leitorId, Id periodicoId, String tipoAssinatura) {
+    // Defino método para atualizar ou inserir um assinatura
+    public Assinatura__c atualizaInsereAssinatura(Id assinaturaId, Id periodicoId, Id leitorId, String tipoAssinatura) 
+    {
+        // Instacio minha classe PeriodicoDAO
+        PeriodicoDAO periodico = new PeriodicoDAO();
 
-        Assinatura__c assinatura = new Assinatura__c(TipoAssinatura__c = tipoAssinatura);
+        // Instancio um assinatura
+        Assinatura__c assinatura = new Assinatura__c();
 
         // Verifico se o parametro assinaturaId não está vindo como nulo (vazio)
         if (assinaturaId != null)
         {
             // Faço uma busca do assinatura por ID, atribuindo os valores de retorno para "assinatura"
             assinatura = buscaAssinaturaPorId(assinaturaId);
-        }
+        } 
         else 
         {
-            // Verifico se o parametro livroId não está vindo como nulo (vazio)
-            if (leitorId != null) 
-            {
-                // Atribuo livroId para o Livro__c de assinatura
-                assinatura.Leitor__c = leitorId;
-            }
-            // Verifico se o parametro livroId não está vindo como nulo (vazio)
+            // Verifico se o parametro periodicoId não está vindo como nulo (vazio)
             if (periodicoId != null) 
             {
                 // Atribuo periodicoId para o Periodico__c de assinatura
                 assinatura.Periodico__c = periodicoId;
             }
+            // Verifico se o parametro periodicoId não está vindo como nulo (vazio)
+            if (leitorId != null) 
+            {
+                // Atribuo leitorId para o Leitor__c de assinatura
+                assinatura.Leitor__c = leitorId;
+            }
+        }
+
+        // Verifico se o tipoAssinatura é diferente de nulo
+        if (tipoAssinatura != '') 
+        {
+            // Atribuo o tipoAssinatura para o campo assinatura.Assinatura__c
+            assinatura.TipoAssinatura__c = tipoAssinatura;
         }
 
         try {
@@ -96,7 +119,7 @@ public with sharing class AssinaturaDAO {
             upsert assinatura;
         } catch (DmlException e) {
             // Realizo um throw, instaciando um Exception customizado e atribuindo uma mensagem para ele
-            throw new AssinaturaDAOException('Entrar em contato com o suporte: ' + e);
+            throw new AssinaturaDAOException('Entrar em contato com o suporte: '+e);
         }
 
         return buscaAssinaturaPorId(assinatura.Id);
