--- a/force-app/main/default/classes/PeriodicoDAO.cls
+++ b/force-app/main/default/classes/PeriodicoDAO.cls
@@ -40,7 +40,7 @@ public with sharing class PeriodicoDAO {
                 Categoria__c
             FROM 
                 Periodico__c
-            WHERE Nome__c = :nome
+            WHERE Nome__c LIKE :nome
         ];
     }
 
