--- a/force-app/main/default/classes/ApexControllerClass.cls
+++ b/force-app/main/default/classes/ApexControllerClass.cls
@@ -84,7 +84,7 @@ public with sharing class ApexControllerClass
     }
     
     @AuraEnabled
-    public static buscaLivrosPorKeyword(String keyword)  {
+    public static List<Livro__c> buscaLivrosPorKeyword(String keyword)  {
 
         LivroDAO livro = new LivroDAO();
 
